# touchstone

./: .env.example  .gitignore  README.md  pyproject.toml
baselines/: registry.yaml
benchmark_tasks/: touchstone_stable_partition.py  ts_accounts_merge.py  ts_eval_expr.py  ts_min_cover.py  ts_partition.py  ts_wildcard.py
docs/: BET.md  COMPETITION.md  GO_LIVE.md  HANDOFF.md  KAGGLE.md  NAME.md  OWNERSHIP.md  STUDY.md  TASK_AUTHORING.md  contamination.md
kaggle/: dataset-metadata.json  notebook_baseline.py.ipynb
leaderboard/: LEADERBOARD.md  leaderboard.csv
scripts/: build_leaderboard.py  export_public_tasks.py  package_kaggle.py  run_baselines.py  validate_suite.py
splits/: holdout.txt  public.txt
src/code_reason/: __init__.py  cli.py  extract.py  grader.py  leaderboard.py  loader.py  models.py  runner.py
src/code_reason/providers/: __init__.py  base.py  gemini.py  grok.py  hf.py  mock.py
tasks/v0_1/: LINEAGE.md
tasks/v0_1/001_sliding_window_max/: prompt.md  reference.py  task.json  tests.py
tasks/v0_1/002_parse_ini_sections/: prompt.md  reference.py  task.json  tests.py
tasks/v0_1/003_race_condition_fix/: prompt.md  reference.py  task.json  tests.py
tasks/v0_1/004_balanced_score/: prompt.md  reference.py  task.json  tests.py
tasks/v0_1/005_merge_labeled_intervals/: prompt.md  reference.py  task.json  tests.py
tasks/v0_1/006_project_csv_rows/: prompt.md  reference.py  task.json  tests.py
tasks/v0_1/007_normalize_unix_path/: prompt.md  reference.py  task.json  tests.py
tasks/v0_1/008_compare_dotted_versions/: prompt.md  reference.py  task.json  tests.py
tasks/v0_1/009_eval_rpn/: prompt.md  reference.py  task.json  tests.py
tasks/v0_1/010_sparse_dot_product/: prompt.md  reference.py  task.json  tests.py
tests/: test_loader_and_grade.py
(+88 files in other folders)
